infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: commit-msg
  labels:
    name: commit-msg
